atlassian/bamboo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bamboo
spec:
  type: NodePort
  selector:
    app: bamboo
  ports:
    - name: http
      port: 8085
      targetPort: 8085
    - name: mq
      port: 54663
      targetPort: 54663
